Fixed minor issue

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 			<footer>
 				<p class="branding">
 					Powered by
-					<a href="https://profile.codersrank.io/user/nolimits4web" target="_blank" rel="noopener noreferrer"
+					<a href="https://profile.codersrank.io/user/charlie-shub" target="_blank" rel="noopener noreferrer"
 						>CodersRank</a
 					>
 				</p>
